syntax = "proto3";

package db;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/cukhoaimon/SimpleBank/pb";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp pass_word_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}
